force-app/main/default/objects/Activity/fields/auara_Canal__c.field-meta.xml
<CustomField>
    <fullName>auara_Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>