force-app/main/default/objects/Activity/fields/auara_EstadoCuenta__c.field-meta.xml
<CustomField>
    <fullName>auara_EstadoCuenta__c</fullName>
    <description>Este campo almacena el estado de la cuenta en el momento del evento. No se podrá actualizar con otro valor.</description>
    <label>Estado de la cuenta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>