force-app/main/default/objects/Activity/fields/auara_Forma__c.field-meta.xml
<CustomField>
    <fullName>auara_Forma__c</fullName>
    <label>Forma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>Telemática</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>