force-app/main/default/objects/Activity/fields/auara_InteresComplicidad__c.field-meta.xml
<CustomField>
    <fullName>auara_InteresComplicidad__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <description>Muestra el interes o la complicidad sobre la oportunidad por parte del cliente</description>
    <label>Interés / Complicidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>