force-app/main/default/objects/Activity/fields/auara_Motivo__c.field-meta.xml
<CustomField>
    <fullName>auara_Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgencia del cliente</fullName>
            </value>
            <value>
                <fullName>Fallo interno</fullName>
            </value>
            <value>
                <fullName>Fallo distribución</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>