force-app/main/default/objects/Activity/fields/auara_Participantes__c.field-meta.xml
<CustomField>
    <fullName>auara_Participantes__c</fullName>
    <label>Participantes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Equipo comercial</fullName>
            </value>
            <value>
                <fullName>Equipo marketing</fullName>
            </value>
            <value>
                <fullName>Con C-level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>