force-app/main/default/objects/Activity/fields/auara_Recorrido__c.field-meta.xml
<CustomField>
    <fullName>auara_Recorrido__c</fullName>
    <description>Description</description>
    <label>Recorrido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Fallido (0-2 mins)</fullName>
            </value>
            <value>
                <fullName>1 - Presentación personal (2-5mins)</fullName>
            </value>
            <value>
                <fullName>2 - Presentación comercial (5-10mins)</fullName>
            </value>
            <value>
                <fullName>3 - Interacción profunda (10-30mins)</fullName>
            </value>
            <value>
                <fullName>4 - Interacción detallada (&gt;30mins)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>